--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,7 +22,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build JAR with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew clean shadowJar
 
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
